# spline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt
include/spline/: diff.hpp  integral.hpp
src/: CMakeLists.txt  diff.cpp  integral.cpp
